2004-10-10  Bruno Haible  <bruno@clisp.org>

	Respect user-defined methods on method-lambda-list.
	* clos-genfun2.lisp (std-add-method): Call method-lambda-list instead
	of std-method-lambda-list.
	* clos-genfun3.lisp (do-defmethod): Likewise.

	Respect user-defined methods on method-qualifiers.
	* clos-genfun1.lisp (|#'method-qualifiers|): New variable.
	(safe-method-qualifiers): New function.
	* clos-methcomb2.lisp (partition-method-list): Add gf argument. Call
	safe-method-qualifiers instead of std-method-qualifiers.
	(standard-method-combination-expander): Update.
	(standard-method-combination-check-method-qualifiers,
	standard-method-combination-call-next-method-allowed,
	short-form-method-combination-expander,
	short-form-method-combination-check-method-qualifiers,
	short-form-method-combination-call-next-method-allowed): Call
	method-qualifiers instead of std-method-qualifiers.
	* clos-genfun2.lisp (invalid-method-qualifiers-error, methods-agree-p,
	std-find-method): Call method-qualifiers instead of
	std-method-qualifiers.
	* clos-genfun4.lisp (no-primary-method, no-next-method): Call
	method-qualifiers instead of std-method-qualifiers.
	* clos-method3.lisp (method-qualifiers): Redefine without fmakunbound.
	Initialize |#'method-qualifiers|.
	* describe.lisp (describe-object@generic-function): Call
	method-qualifiers instead of std-method-qualifiers.

	Respect user-defined methods on method-specializers.
	* clos-genfun1.lisp (|#'method-specializers|): New variable.
	(safe-method-specializers): New function.
	* clos-methcomb2.lisp (method-applicable-p, sort-applicable-methods):
	Add gf argument. Call safe-method-specializers instead of
	std-method-specializers.
	(long-form-method-combination-collect-duplicates): Call
	method-specializers instead of std-method-specializers.
	* clos-genfun2.lisp (methods-agree-p, std-add-method,
	std-remove-method, std-find-method): Call method-specializers instead
	of std-method-specializers.